overlays/dev/bluegreen/bluegreen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven-app-active
  namespace: dev
spec:
  selector:
    app: maven-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: maven-app-preview
  namespace: dev
spec:
  selector:
    app: maven-app
  ports:
    - port: 80
      targetPort: 8080
